spec/e2e/variable/duplicate_parameter.lit
fn foo { |arg,
        arg| # error: [line 2] Error at "arg": Already a variable with this name in this scope.
  "body";
}
